# wasm_walker

./: .gitignore  Cargo.toml  README.md  foo.wasm  foo.wat  log.txt  parsed_debug.txt  parsed_json.json  path.py  run.py  run.sh  to_json.py
__logs__/: code.wat  parsed_debug.txt  parsed_json.json  paths.txt
data/: README.md  combined.7z.link  seqs.7z.link
embedding/: common_paths.txt  hash_table.json
implementation/: README.md
implementation/extraction/: accumulate.py  collect.py  path.py  run.py  to_wat.py
implementation/extraction/paths_set/: create_hash_table.sh
implementation/extraction/src/: main.rs
implementation/scripts/clean-data/method-name/: common_names.txt  divide_dataset_elements.py  generate_seqs.py  get_common_names.py  paths_summarize.json  split_dataset.py
implementation/scripts/clean-data/type-pred/: generate_seqs.py  paths.json
implementation/scripts/training/: OpenNMT.ipynb  embedding.ipynb
models/: README.md  models.7z.link
results/: README.md  eval.py
src/: main.rs
syn_compiler/: lexer.py  parser.out  parser.py  parsetab.py
test/9mount-1.3/: 9mount.wasm
test/abcmidi/src/abcmidi-20180222/: abc2midi.wasm  midi2abc.wasm
test/acct/src/acct-6.6.4/: a.wasm
test/acpi/src/acpi-1.7/: acpi.wasm
test/adjtimex/src/adjtimex-1.29/: adjtimex.wasm
test/aesfix/src/aesfix-1.0.1/: aesfix.wasm
test/aeskeyfind/src/aeskeyfind-1.0/: aeskeyfind.wasm
test/aespipe/src/aespipe-2.4d/: aespipe.wasm
test/agedu/src/agedu-9723/: a.wasm  agedu.wasm
test/aggregate/src/aggregate-1.6/: aggregate.wasm
test/aha/src/aha-0.4.10.6/: aha.wasm
(+57 files in other folders)
