[package]
name = "proj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmparser = "0.93.0"
wast = "48.0.0"
wat = "1.0.50"
anyhow = "1.0.58"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"

[patch.crates-io]
wasmparser = { path = "./wasm-tools/crates/wasmparser/" }
wast = { path = "./wasm-tools/crates/wast/" }
wat = { path = "./wasm-tools/crates/wat/" }